--- a/.sample.env
+++ b/.sample.env
@@ -1,5 +1,7 @@
 NODE_ENV=development
 DATABASE_URL=postgresql:........
+NEXTAUTH_URL=http://localhost:3000
+ENABLE_DB_KEEPALIVE= true
 
 AUTH_GITHUB_ID=...
 AUTH_GITHUB_SECRET=...
