--- a/.sample.env
+++ b/.sample.env
@@ -2,6 +2,7 @@ NODE_ENV=development
 DATABASE_URL=postgresql:........
 NEXTAUTH_URL=http://localhost:3000
 ENABLE_DB_KEEPALIVE= true
+NEXT_PUBLIC_BASE_URL=your-domain
 
 AUTH_GITHUB_ID=...
 AUTH_GITHUB_SECRET=...
